# steering-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/expected/: actadd_emm_emc.yaml  spare_emm_parametric.yaml
configs/experiments/: actadd_llama2_macnoise_context.yaml  actadd_llama2_macnoise_param.yaml  actadd_llama2_macnoise_param_train.yaml  actadd_llama2_nqswap_context.yaml  actadd_llama2_nqswap_param.yaml  actadd_tinygpt2_beavertails.yaml  actadd_tinygpt2_empathetic_tone.yaml  actadd_tinygpt2_fever.yaml  actadd_tinygpt2_flores200_es.yaml  actadd_tinygpt2_gyafc.yaml  actadd_tinygpt2_nqswap_context.yaml  actadd_tinygpt2_nqswap_param.yaml  actadd_tinygpt2_qasper.yaml  actadd_tinygpt2_squad_v2.yaml  actadd_tinygpt2_sst2_tone.yaml  cad_llama2_nqswap_context.yaml  cad_llama2_nqswap_param.yaml  (+84 more)
results/: prompt_llama2_macnoise_param.json  smoke_gpt2_nqswap.json  smoke_llama2_7b_nqswap.json  smoke_spare_llama2_nqswap_prompted_ctx_sanity.json  smoke_spare_sasa_mistral7b_nqswap_prompted_ctx_layer8_strong_directional_fix.json  smoke_spare_sasa_mistral7b_nqswap_prompted_ctx_layer8_strong_directional_fix2.json  smoke_spare_sasa_mistral7b_nqswap_prompted_param_layer8_strong_directional_fix.json  smoke_spare_sasa_mistral7b_nqswap_prompted_param_layer8_strong_directional_fix2.json  smoke_tinygpt2_nqswap.json
scripts/: activate_env.sh  run_benchmark.sh  run_smoke_test.sh
steering_benchmark/: __init__.py  __main__.py  cli.py  compare.py  config.py  registry.py  report.py
tests/: test_composite_method.py  test_metrics.py  test_smoke_tinygpt2.py  test_sweeps.py
(+65 files in other folders)
